# c_z80_emulator

./: .clang_format  .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: cpu.c.8F4B778BF648F15A.idx  cpu.h.57C1293565274CDB.idx  main.c.054C5A840AC13C85.idx  memory.c.8AFCD842ABF1ECED.idx  zx_spectrum.h.B65BA2B93FA5025F.idx
src/: CMakeLists.txt  cpu.c  cpu.h  loader.c  loader.h  main.c  memory.c  memory.h  z80.c  z80.h  zx_spectrum.c  zx_spectrum.h
